<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_option">Glide - Image Loading Library by Bump Tech</string>
    <string name="load_app_option">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_option">Retrofit - Type safe HTTP Client for Android and Java by Square, Inc</string>

    <string name="please_select">Please select the file to download</string>

    <string name="notification_channel_id" translatable="false">custom_channel</string>
    <string name="check_status">Check Status</string>
    <string name="notification_channel_name" translatable="true">Downloads</string>

    <string name="ok" translatable="true">OK</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>

    <string name="success">Success</string>
    <string name="fail">Fail</string>
</resources>
