<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radio_group"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide_option"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton android:id="@+id/radio_load_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_app_option"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton android:id="@+id/radio_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_option"
            android:onClick="onRadioButtonClicked"
            />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        app:bgColor="@color/colorPrimary"
        app:textColor="@color/white"
        app:circleProgressBarColor="@color/colorAccent"
        app:linearProgressBarColor="@color/colorPrimaryDark"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>